--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,46 @@
 /************* BASE STYLES *************/
-* { box-sizing: border-box; }
-body { font-family: 'Open Sans', sans-serif; font-size: 14px; line-height: 1.4; color: #364147; margin: 0; }
-input, button { font-family: inherit; font-size: inherit; }
-a { color: #faa541; text-decoration: none; }
-ul { padding: 0; margin: 0; list-style: none; }
-nav { padding: 10px 0; }
-h1, h2, h3, h4, h5, h6 { margin: 0; }
+* {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    line-height: 1.4;
+    color: #364147;
+    margin: 0;
+}
+
+input,
+button {
+    font-family: inherit;
+    font-size: inherit;
+}
+
+a {
+    color: #faa541;
+    text-decoration: none;
+}
+
+ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+nav {
+    padding: 10px 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0;
+}
+
 /***************************************/
 
 /* Container Class */
@@ -19,6 +54,7 @@ section {
 }
 
 /* Flex Utilities */
+
 .flex {
     display: flex;
 }
@@ -44,9 +80,10 @@ section {
 }
 
 /* Buttons */
+
 .btn {
     cursor: pointer;
-    border-width: 0;
+    border: 0;
     padding: 6px 12px;
     border-radius: 3px;
     line-height: 1.4;
@@ -63,10 +100,28 @@ section {
 }
 
 /* Form Controls */
+
 .form-control {
     display: block;
     padding: 6px 12px;
     border: 1px solid #a0a0a0;
     color: #8598a2;
     line-height: 1.4;
+}
+
+/* Typography */
+
+.text-light {
+    font-size: 30px;
+    color: #a0a0a0;
+}
+
+.text-secondary {
+    font-size: 30px;
+    color: #faa541;
+}
+
+.text-primary {
+    font-size: 16px;
+    color: #364147;
 }
