--- a/css/main.css
+++ b/css/main.css
@@ -126,7 +126,7 @@ section {
     color: #364147;
 }
 
-/* Header */
+/* Header/Navigation */
 
 .header-nav {
     border-bottom: 1px solid #a0a0a0;
@@ -158,4 +158,17 @@ section {
     height: 30px;
     border: 0;
     padding: 0;
+}
+
+.nav-list {
+    padding-left: 0;
+    width: 575px;
+    margin-top: 10px;
+}
+
+.nav-list li a {
+    font-size: 16px;
+    text-transform: uppercase;
+    font-weight: 700;
+    letter-spacing: 0.2px;
 }
