--- a/css/main.css
+++ b/css/main.css
@@ -197,3 +197,18 @@ section {
     border-radius: 100px;
     max-width: 100%;
 }
+
+/* Hero */
+
+.hero {
+    background-image: url("img/hero.jpg");
+    height: 400px;
+    background-size: cover;
+    background-position: center;
+    text-transform: uppercase;
+}
+
+.hero h1 {
+    position: relative;
+    left: -30px;
+}
