Add background image to the hero section

--- a/css/main.css
+++ b/css/main.css
@@ -201,7 +201,7 @@ section {
 /* Hero */
 
 .hero {
-    background-image: url("img/hero.jpg");
+    background-image: url("../img/hero.jpg");
     height: 400px;
     background-size: cover;
     background-position: center;
