--- a/css/main.css
+++ b/css/main.css
@@ -309,7 +309,7 @@ section {
     background-image: url("../img/vista.jpg");
     background-size: cover;
     background-position: top;
-    height: 400px;
+    min-height: 400px;
 }
 
 .full-banner-sidebar {
@@ -352,5 +352,137 @@ section {
 .full-banner-sidebar .btn.btn-default {
     margin-top: 50px;
     text-transform: uppercase;
+    letter-spacing: 1px;
     z-index: 1;
+}
+
+/* Footer */
+
+footer {
+    display: flex;
+    position: relative;
+    z-index: 0;
+    min-height: 330px;
+    background-color: black;
+    /* background-color: #a0a0a0; */
+}
+
+footer::after {
+    content: "";
+    background-color: #a0a0a0;
+    width: 75%;
+    position: absolute;
+    inset: 0;
+    z-index: -1;
+}
+
+.lists {
+    flex: 0 0 75%;
+    padding: 40px 15px;
+}
+
+.link-header {
+    text-transform: uppercase;
+    font-size: 16px;
+    font-weight: 700;
+    margin-bottom: 15px;
+}
+
+footer a {
+    color: white;
+    text-transform: uppercase;
+    font-size: 12px;
+    padding: 0 0 4px;
+}
+
+footer a:hover {
+    text-decoration: underline;
+}
+
+.social ul li {
+    display: inline-block;
+}
+
+.social ul li a {
+    display: block;
+    width: 23px;
+    height: 23px;
+    background-size: 23px 23px;
+    background-position: center;
+}
+
+.twitter {
+    background-image: url("../img/twitter.svg");
+}
+
+.facebook {
+    background-image: url("../img/facebook.svg");
+}
+
+.instagram {
+    background-image: url("../img/instagram.svg");
+}
+
+.pinterest {
+    background-image: url("../img/pinterest.svg");
+}
+
+.newsletter .link-header {
+    font-size: 12px;
+    font-weight: 400;
+    margin-bottom: 5px;
+}
+
+.newsletter .link-subheader {
+    font-style: italic;
+    font-size: 12px;
+    font-weight: 400;
+    margin-bottom: 15px;
+}
+
+.newsletter input {
+    border: 1px solid #364147;
+    width: 200px;
+    margin-bottom: 10px;
+}
+
+.newsletter button {
+    width: 150px;
+    min-width: auto;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+
+.ps {
+    flex: 0 0 25%;
+    padding: 40px 0;
+    color: #e5e5e5;
+    font-size: 16px;
+}
+
+.ps img {
+    width: 230px;
+}
+
+.demo {
+    padding: 40px 30px;
+    flex: 0 0 25%;
+    color: #e5e5e5;
+    font-size: 16px;
+}
+
+/* .demo::before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 1px;
+    margin: 30px;
+    background: linear-gradient(to right,#f05a28,#e80a89);
+} */
+
+.copyright {
+    flex: 0 0 75%;
+    padding: 10px 0;
+    font-size: 12px;
+    text-align: center;
 }
