--- a/css/main.css
+++ b/css/main.css
@@ -359,21 +359,7 @@ section {
 /* Footer */
 
 footer {
-    display: flex;
-    position: relative;
-    z-index: 0;
-    min-height: 330px;
-    background-color: black;
-    /* background-color: #a0a0a0; */
-}
-
-footer::after {
-    content: "";
     background-color: #a0a0a0;
-    width: 75%;
-    position: absolute;
-    inset: 0;
-    z-index: -1;
 }
 
 .lists {
@@ -465,24 +451,38 @@ footer a:hover {
 }
 
 .demo {
-    padding: 40px 30px;
-    flex: 0 0 25%;
+    padding: 40px 0;
     color: #e5e5e5;
     font-size: 16px;
+    text-align: center;
+    background-color: black;
 }
 
-/* .demo::before {
+.demo p {
+    margin: 0 auto;
+}
+
+.demo > div::before {
     content: "";
     display: block;
-    width: 100%;
+    width: 80%;
     height: 1px;
-    margin: 30px;
+    margin: 30px auto;
     background: linear-gradient(to right,#f05a28,#e80a89);
-} */
+}
 
 .copyright {
-    flex: 0 0 75%;
     padding: 10px 0;
     font-size: 12px;
     text-align: center;
+    text-transform: uppercase;
+}
+
+.copyright > * {
+    display: inline-block;
+    padding: 0 30px;
+}
+
+.copyright p:first-child {
+    border-right: 1px solid white;
 }
